# cs-89512

./: README.md
ex1/: README.md  pyproject.toml
ex1/ex1/: README.md  package.json  serve.py  tailwind.config.js
ex1/ex1/src/: app.css
ex1/ex1/src/routes/: +layout.svelte  +page.svelte  Game.svelte
ex2/ex2/: Letter2_Freq.txt  cipher.py  dummy_impl.py  gaparams.py  genetic_algorithm.py  impl.py  main.py  params.py  perm.py  runner.py  score.py  test_cipher.py  test_dummy_impl.py  test_perm.py  test_score.py
ex2/ex2/help_files/: Letter_Freq.txt  dict.txt  enc.txt
ex2/ex2/tests/: test_cipher.py  test_impl.py
ex3/: buildnet.py  buildnet0.py  buildnet1.py  funcs.py  gentestnet.py  gentestnet0.py  gentestnet1.py  main.py  measurenet.py  measurenet0.py  measurenet1.py  network.py  nn0.txt  nn1.txt  run0.sh  run1.sh  runnet.py  runnet0.py  runnet1.py  split_dataset.py  testnet0  testnet0_real  utils.py  wnet0  wnet0.txt  wnet1.txt
