[tool.poetry]
name = "ex1"
version = "0.1.0"
description = ""
authors = ["Hod Bin Noon <hodbn@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ex1", from = "src"}]

[tool.poetry.dependencies]
python = "^3.6.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
